fix img post display on mobile

--- a/src/home/styling/home.scss
+++ b/src/home/styling/home.scss
@@ -26,7 +26,7 @@
   align-items: center;
   background-color: var(--bg);
   min-height: 92dvh;
-  padding-top: 1.5rem;
+  padding: 1.5rem 0;
 }
 
 .body-section {
